<resources>
    <string name="app_name">NCT AI-Trading</string>
    <string name="hintEmail">Enter your email</string>
    <string name="hintPassword">Enter your password</string>
    <string name="binanceKeys">Enter Binance Keys</string>
    <string name="signInButton">Sign In</string>
    <string name="startStopListening">Start/Stop Listening</string>
    <string name="paymentOptions">Payment Options</string>
    <string name="editCredentials">Edit Credentials</string>
    <string name="donation">Donation</string>
    <string name="alternativeInvestments">Alternative Investments</string>
    <string name="enterDiscountCode">Ex : 123456789</string>
    <string name="checkDiscountCode">Check discount code</string>
    <string name="payByCrypto">Pay by Crypto</string>
    <string name="payByCard">Pay by Card</string>
    <string name="refreshPaymentStatus">Refresh Payment Status</string>
    <string name="termsOfService">Terms of Service</string>
    <string name="agree">Agree</string>
    <string name="signUp">Sign Up</string>
    <string name="username">Username : </string>
    <string name="email">Email : </string>
    <string name="password">Password : </string>
    <string name="confirmPassword">Confirm Password : </string>
    <string name="firstName">First Name : </string>
    <string name="lastName">Last Name : </string>
    <string name="usernameHint">Enter username here</string>
    <string name="emailHint">Enter email here</string>
    <string name="passwordHint">Enter password here</string>
    <string name="confirmPasswordHint">Confirm password here</string>
    <string name="firstNameHint">Enter First Name here</string>
    <string name="lastNameHint">Enter Last Name here</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="backToMainPage">Back to Home Page</string>
    <string name="Invest">Invest</string>
    <string name="termsOfServiceContent">These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech These are the terms of service - Next Capital Tech </string>
    <string name="title_activity_enter_binance_keys">enterBinanceKeys</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="coinbaseString">Enter Coinbase Keys</string>
</resources>